Include user supplied paypal note in memo field

BUG: 444414
FIXED-IN:5.1.3
(cherry picked from commit 74ba29e8c0a31a29bb48236f3b01b38968c58485)